--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -1,8 +1,10 @@
 .popup__button {
   width: 100%;
-  height: 50px;
+  height: 64px;
   border: 1px solid rgba(0, 0, 0, .2);
-  margin-top: 48px;
-  color: rgba(0, 0, 0, .2);
-  font-size: 36px;
+  margin-top: 40px;
+  color: #B6BCBF;
+  font-size: 1.125rem;
+  border-radius: 100px;
+  background-color: #E6E8EB;
 }
