--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -7,6 +7,8 @@
 @import url(./__button/popup__button_enebled.css);
 @import url(./_is-opened/popup_is-opened.css);
 @import url(./__button/user-info__edit-button.css);
+@import url(./__tip/popup__tip.css);
+@import url(./__reg/popup__reg.css);
 
 .popup {
   position: fixed;
