--- a/src/blocks/common/menu/menu.css
+++ b/src/blocks/common/menu/menu.css
@@ -12,3 +12,10 @@
   border-bottom: 1px solid #e5e5e5;
   min-height: 80px;
 }
+
+@media screen and (max-width: 767px) {
+  .menu {
+    padding-left: 16px;
+    min-height: 56px;
+    }
+  }
