--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -12,7 +12,20 @@
   flex-direction: column;
   opacity: 1;
   color: #FFFFFF;
-  min-height: 576px;;
+  min-height: 576px;
   background-image: url(../../images/background.png);
   /* overflow: hidden; */
+}
+
+@media screen and (max-width: 1023px) {
+  .header{
+    min-height: 400px;
+
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    min-height: 536px;
+  }
 }
