--- a/src/blocks/popup/__button/popup__button_enebled.css
+++ b/src/blocks/popup/__button/popup__button_enebled.css
@@ -1,8 +1,6 @@
 .popup__button_enebled {
-
-  border: 1px soli d#000000;
   margin-top: 48px;
-  background-color: #000000;
+  background-color: #2F71E5;
   color: white;
 
 }
