--- a/src/blocks/slider/__title-container/__git-link/slider__git-link.css
+++ b/src/blocks/slider/__title-container/__git-link/slider__git-link.css
@@ -1,6 +1,13 @@
+@import url(./_mobile/slider__git-link_mobile.css);
 .slider__git-link {
   text-decoration: none;
   font-weight: 500;
   font-size: 1.125rem;
   color: #1A1B22;
+}
+
+@media screen and (max-width: 767px) {
+.slider__git-link {
+    display: none;
+  }
 }
