--- a/src/blocks/slider/slider.css
+++ b/src/blocks/slider/slider.css
@@ -1,5 +1,8 @@
 @import url(./__title-container/slider__title-container.css);
 @import url(./swiper-wrapper/swiper-wrapper.css);
+@import url(./swiper-button-next/swiper-button-next.css);
+@import url(./swiper-button-prev/swiper-button-prev.css);
+@import url(./swiper-pagination/swiper-pagination.css);
 
 .slider {
   position: relative;
@@ -19,3 +22,12 @@
     padding: 32px 16px 32px 16px;
   }
 }
+
+
+
+@media screen and (max-width: 767px) {
+  .slider__title {
+    font-size: 1.875rem;
+    padding-top: 0;
+    }
+  }
