--- a/src/blocks/about/__wrapper/about__wrapper.css
+++ b/src/blocks/about/__wrapper/about__wrapper.css
@@ -1,5 +1,27 @@
 .about__wrapper {
+  width: 100%;
   display: flex;
   margin-top: 80px;
   margin-bottom: 80px;
+  margin-left: 104px;
 }
+
+
+@media screen and (max-width: 1023px) {
+  .about__wrapper {
+    margin-top: 40px;
+    margin-bottom: 60px;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .about__wrapper {
+    flex-direction: column;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    margin-left: 24px;
+    margin-right: 24px;
+    }
+  }
