--- a/src/blocks/about/about.css
+++ b/src/blocks/about/about.css
@@ -6,5 +6,11 @@
   display: flex;
   max-height: 624px;
   background-color: #fff;
-
 }
+
+@media screen and (max-width: 767px) {
+  .about {
+    max-height: none;
+    }
+  }
+
