--- a/src/blocks/common/footer/footer.css
+++ b/src/blocks/common/footer/footer.css
@@ -15,6 +15,8 @@
 @media screen and (max-width: 1023px) {
   .footer {
     height: 64px;
+    margin-left: 40px;
+    margin-right: 40px;
   }
 }
 
@@ -25,5 +27,7 @@
     align-items: flex-start;
     margin-top: 20px;
     padding: 0 16px 0 16px;
+    margin-left: 40px;
+    margin-right: 40px;
   }
 }
