--- a/src/blocks/common/menu/__column-links/menu__column-links.css
+++ b/src/blocks/common/menu/__column-links/menu__column-links.css
@@ -6,3 +6,9 @@ justify-content: space-between;
 list-style-type: none;
 font-weight: 500;
 }
+
+@media screen and (max-width: 767px) {
+  .menu__column-links {
+    display: none;
+    }
+  }
