--- a/src/blocks/content/content.css
+++ b/src/blocks/content/content.css
@@ -3,4 +3,10 @@
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
-} */
+}
+
+@media screen and (max-width: 767px) {
+  .content {
+    max-width: 320px;
+    }
+  } */
