--- a/src/blocks/customers/customers.css
+++ b/src/blocks/customers/customers.css
@@ -9,3 +9,22 @@
   max-width: 815px;
   background-color: #fff;
 }
+
+@media screen and (max-width: 1023px) {
+  .customers {
+    max-width: 100%;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .customers {
+    margin-top: 16px;
+    margin-bottom: 32px;
+    margin-left: 16px;
+    margin-right: 16px;
+    }
+  }
