--- a/src/blocks/header/__bar/header__bar.css
+++ b/src/blocks/header/__bar/header__bar.css
@@ -9,3 +9,12 @@
   border-radius: 100px;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 767px) {
+  .header__bar {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 122px;
+  }
+}
