--- a/src/blocks/header/__input/header__input.css
+++ b/src/blocks/header/__input/header__input.css
@@ -1,6 +1,6 @@
 .header__input {
 background: #FFFFFF;
-width: 1000%;
+width: 100%;
 border: 0;
 box-sizing: border-box;
 backdrop-filter: blur(8px);
@@ -10,3 +10,9 @@ padding-top: 21px;
 padding-left: 24px;
 outline: none;
 }
+
+@media screen and (max-width: 767px) {
+  .header__input {
+    margin-bottom: 16px;
+    }
+  }
