--- a/src/blocks/header/__title/_about/header__title_about.css
+++ b/src/blocks/header/__title/_about/header__title_about.css
@@ -2,3 +2,18 @@
 max-width: 530px;
 margin-top: 30px;
 }
+
+@media screen and (max-width: 1023px) {
+  .header__title.header__title_about{
+    max-width: 336px;
+    font-size: 1.875rem;
+    margin-top: 16px;
+
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header__title.header__title_about {
+
+    }
+  }
