--- a/src/blocks/header/__title/header__title.css
+++ b/src/blocks/header/__title/header__title.css
@@ -12,3 +12,18 @@
   margin: 40px 0 0;
   font-weight: 400;
 }
+
+@media screen and (max-width: 1023px) {
+  .header__title{
+    max-width: 385px;
+    font-size: 2rem;
+    margin-top: 38px;
+
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header__title {
+    margin-top: 0px;
+    }
+  }
