--- a/src/blocks/header/__wrapper/_about/header__wrapper_about.css
+++ b/src/blocks/header/__wrapper/_about/header__wrapper_about.css
@@ -4,3 +4,18 @@ max-width: 530px;
 margin-bottom: 0px;
 margin-top: 40px;
 }
+
+@media screen and (max-width: 1023px) {
+  .header__wrapper.header__wrapper_about {
+    margin-top: 24px;
+    margin-left: 40px;
+
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header__wrapper.header__wrapper_about {
+    margin-left: 16px;
+    margin-right: 16px;
+    }
+  }
