--- a/src/blocks/results/__container/results__continer.css
+++ b/src/blocks/results/__container/results__continer.css
@@ -4,3 +4,13 @@
   column-gap: 16px;
   row-gap: 16px;
 }
+
+
+
+@media screen and (max-width: 767px) {
+  .results__continer {
+    grid-template-columns: 1fr;
+
+  }
+}
+
