--- a/src/blocks/results/__main-container/results__main-container.css
+++ b/src/blocks/results/__main-container/results__main-container.css
@@ -3,3 +3,15 @@
   justify-content: space-around;
   margin: 80px 104px;
 }
+
+@media screen and (max-width: 1023px) {
+  .results__main-container {
+    margin: 40px 40px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .results__main-container {
+    margin: 16px 16px;
+  }
+}
