--- a/src/blocks/slider/__title-container/slider__title-container.css
+++ b/src/blocks/slider/__title-container/slider__title-container.css
@@ -7,3 +7,11 @@
   align-items: center;
   margin-bottom: 64px;
 }
+
+@media screen and (max-width: 767px) {
+  .slider__title-container {
+    margin-bottom: 16px;
+    margin-top: 32px;
+    max-width: 60%;
+    }
+  }
