--- a/src/blocks/technology/__item/technology__item.css
+++ b/src/blocks/technology/__item/technology__item.css
@@ -6,3 +6,18 @@ display: flex;
 flex-direction: column;
 align-items: center;
 }
+
+@media screen and (max-width: 1023px) {
+  .technology__item  {
+    margin-top: 0px;
+    margin-bottom: 0;
+
+
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .technology__item  {
+    margin: 0 auto;
+    }
+  }
