--- a/src/blocks/technology/__title/technology__title.css
+++ b/src/blocks/technology/__title/technology__title.css
@@ -4,3 +4,22 @@
   margin-left: 104px;
   max-width: 340px;
 }
+
+@media screen and (max-width: 1023px) {
+  .technology__title {
+    margin-top: 40px;
+    margin-left: 40px;
+    margin-bottom: 0;
+    font-size: 1.875rem;
+
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .technology__title {
+    margin-top: 32px;
+    margin-left: 16px;
+    margin-right: 16px;
+
+    }
+  }
