--- a/src/blocks/technology/__wrapper/technology__wrapper.css
+++ b/src/blocks/technology/__wrapper/technology__wrapper.css
@@ -2,3 +2,17 @@
 display: flex;
 flex-direction: row;
 }
+
+@media screen and (max-width: 1023px) {
+  .technology__wrapper {
+    flex-direction: column;
+    max-width: 100%;
+
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .technology__wrapper {
+
+    }
+  }
