--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+/* @media screen and (max-width: 767px) {
+  .page {
+    max-width: 320px;
+  }
+} */
