--- a/src/blocks/common/menu/__column-link/menu__column-link.css
+++ b/src/blocks/common/menu/__column-link/menu__column-link.css
@@ -10,3 +10,15 @@
   cursor: pointer;
   color: #fff;
 }
+
+@media screen and (max-width: 1023px) {
+  .menu__column-link {
+    font-size: 1.12rem;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .menu__column-link {
+    font-size: 1.12rem;
+  }
+}
