--- a/src/blocks/common/footer/__menu/__menu-link/footer__menu-link.css
+++ b/src/blocks/common/footer/__menu/__menu-link/footer__menu-link.css
@@ -1,11 +1,22 @@
-.footer__menu-link a {
+.footer__menu-link {
   font-family: Roboto;
   font-size: 1.12rem;
   margin-right: 40px;
-  color: black;
-  text-decoration: none;
 }
 
 .footer__menu-link:last-child {
-  margin-right: 0px;
+  /* margin-right: 0px; */
 }
+
+@media screen and (max-width: 1023px) {
+  .footer__menu-link {
+    margin-right: 20px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer__menu-link {
+margin-bottom: 20px;
+  }
+}
+
