--- a/src/blocks/common/menu/__item/menu__item.css
+++ b/src/blocks/common/menu/__item/menu__item.css
@@ -8,3 +8,16 @@
   display: flex;
   height: 100%;
 }
+
+.menu__item:last-of-type {
+  margin-right: 0px;
+}
+
+@media screen and (max-width: 1023px) {
+  .menu__item {
+    margin-right: 16px;
+    }
+  }
+
+
+
