--- a/src/blocks/common/menu/__link-auth/menu__link-auth.css
+++ b/src/blocks/common/menu/__link-auth/menu__link-auth.css
@@ -6,3 +6,10 @@
   border-radius: 100px;
   padding: 15px;
 }
+
+@media screen and (max-width: 1023px) {
+  .menu__link-auth {
+    padding: 6px;
+  }
+}
+
