--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,7 @@
   box-sizing: border-box;
 }
 
-/* @media screen and (max-width: 767px) {
-  .page {
-    max-width: 320px;
-  }
-} */
+a {
+  text-decoration: none;
+  color: black;
+}
