--- a/src/blocks/common/button/button.css
+++ b/src/blocks/common/button/button.css
@@ -8,18 +8,14 @@
   color: white;
   box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
   line-height: 1.33;
-  background-color: #2f71e5;
   border: 0px;
   cursor: pointer;
 }
 
-.button:hover {
+/* .button:hover {
   background-color: #347eff;
-}
+} */
 
-.button:active {
-  background-color: #2a65cc;
-}
 
 .button:disabled {
   color: #b6bcbf;
