--- a/src/blocks/results/__show-more/results__show-more.css
+++ b/src/blocks/results/__show-more/results__show-more.css
@@ -6,6 +6,10 @@
   line-height: 133%;
 }
 
+.results__show-more:hover {
+  opacity: 0.9;
+}
+
 @media screen and (max-width: 1023px) {
   .results__show-more {
     margin-top: 25px;
