--- a/src/blocks/common/footer/__copyright/footer__copyright.css
+++ b/src/blocks/common/footer/__copyright/footer__copyright.css
@@ -1,4 +1,5 @@
-@import url(./_grey/footer__copyright_grey.css);
-.footer__copyright {
-font-size: 1rem;
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    color: #B6BCBF;
+  }
 }
