--- a/src/blocks/common/footer/footer.css
+++ b/src/blocks/common/footer/footer.css
@@ -8,26 +8,28 @@
   justify-content: space-between;
   align-items: center;
   height: 80px;
-  margin-left: 104px;
-  margin-right: 104px;
+  padding-left: 104px;
+  padding-right: 104px;
+  background-color: #fff;
+  margin: 0;
 }
 
 @media screen and (max-width: 1023px) {
   .footer {
     height: 64px;
-    margin-left: 40px;
-    margin-right: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .footer {
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
     height: 224px;
     align-items: flex-start;
-    margin-top: 20px;
-    padding: 0;
-    margin-left: 16px;
-    margin-right: 16px;
+    padding-top: 20px;
+    padding-left: 16px;
+    padding-right: 16px;
+    align-items: initial;
   }
 }
