--- a/src/blocks/common/menu/menu.css
+++ b/src/blocks/common/menu/menu.css
@@ -4,6 +4,7 @@
 @import url(./__link-auth/menu__link-auth.css);
 @import url(./__logo/menu__logo.css);
 @import url(./__logout-icon/menu__logout-icon.css);
+@import url(./__mobile/menu__mobile.css);
 
 .menu {
   display: flex;
