--- a/src/blocks/common/menu/__column-link/menu__column-link.css
+++ b/src/blocks/common/menu/__column-link/menu__column-link.css
@@ -10,7 +10,8 @@
   font-weight: 500;
   cursor: pointer;
   color: #fff;
-  margin-right: 32px;
+  margin-right: 16px;
+  margin-left: 16px;
 
 }
 
