--- a/src/blocks/popup/__content/popup__content.css
+++ b/src/blocks/popup/__content/popup__content.css
@@ -1,3 +1,5 @@
+@import url(./_succeeded/popup__content_succeeded.css);
+
 .popup__content {
   display: flex;
   flex-direction: column;
@@ -12,6 +14,9 @@
 
 @media screen and (max-width: 540px) {
   .popup__content {
-    width: calc(100% - 60px);
+    width: 100%;
+    height: calc(100% - 60px);
+    align-self: flex-end;
+
   }
 }
