--- a/src/blocks/common/card/__image/__bookmark-notification/_about/card__bookmark-notification_about.css
+++ b/src/blocks/common/card/__image/__bookmark-notification/_about/card__bookmark-notification_about.css
@@ -2,7 +2,7 @@
   opacity: 1;
   top: 24px;
   left: 24px;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 0,875rem;
