--- a/src/blocks/header/__description/header__description.css
+++ b/src/blocks/header/__description/header__description.css
@@ -3,7 +3,7 @@
 
 .header__description {
 margin-top: 32px;
-font-family: Roboto;
+font-family: 'Roboto', sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 1.125rem;
