--- a/src/blocks/header/__title/header__title.css
+++ b/src/blocks/header/__title/header__title.css
@@ -3,7 +3,7 @@
 
 .header__title {
   max-width: 400px;
-  font-family: Roboto Slab;
+  font-family: 'Roboto Slab', serif;
   font-style: normal;
   font-weight: normal;
   font-size: 3.75rem;
