--- a/src/blocks/about/about.css
+++ b/src/blocks/about/about.css
@@ -1,6 +1,7 @@
 @import url(./__content/about__content.css);
 @import url(./__photo/about__photo.css);
 @import url(./__wrapper/about__wrapper.css);
+@import url(./__img/about__img.css);
 
 .about {
   display: flex;
