--- a/src/blocks/common/footer/__menu/__menu-link/footer__menu-link.css
+++ b/src/blocks/common/footer/__menu/__menu-link/footer__menu-link.css
@@ -1,11 +1,7 @@
 .footer__menu-link {
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 1.12rem;
   margin-right: 40px;
-}
-
-.footer__menu-link:last-child {
-  /* margin-right: 0px; */
 }
 
 @media screen and (max-width: 1023px) {
