--- a/src/blocks/common/menu/__logo/menu__logo.css
+++ b/src/blocks/common/menu/__logo/menu__logo.css
@@ -2,7 +2,7 @@
 
 .menu__logo {
   text-decoration: none;
-  font-family: Roboto Slab;
+  font-family: 'Roboto Slab', serif;
   font-style: normal;
   font-size: 1.25rem;
   font-weight: 900;
