--- a/src/blocks/slider/swiper-wrapper/swiper-slide/__author/__author-box/__auther-name/slider__auther-name.css
+++ b/src/blocks/slider/swiper-wrapper/swiper-slide/__author/__author-box/__auther-name/slider__auther-name.css
@@ -1,5 +1,5 @@
 .slider__auther-name{
-  font-family: Roboto Slab;
+  font-family: 'Roboto Slab', serif;
   font-size: 1.626rem;
   margin: 0 auto;
   margin-bottom: 5px;
