--- a/src/blocks/common/menu/__link-auth-container/menu__link-auth-container.css
+++ b/src/blocks/common/menu/__link-auth-container/menu__link-auth-container.css
@@ -1,6 +1,5 @@
-@import url(./_black/menu__link-auth_black.css);
-/*
-.menu__link-auth{
+.menu__link-auth-container {
+  display: flex;
   margin-right: 0px;
   border: 1px solid #fff;
   border-radius: 100px;
@@ -8,8 +7,11 @@
 }
 
 @media screen and (max-width: 1023px) {
-  .menu__link-auth {
+  .menu__link-auth-container {
     padding: 6px;
   }
-} */
+}
 
+.menu__link-auth-container_black {
+  border: 1px solid #1a1b22;
+}
