--- a/src/blocks/common/menu/__column-links/_mobile/menu__column-links_mobile.css
+++ b/src/blocks/common/menu/__column-links/_mobile/menu__column-links_mobile.css
@@ -1,3 +1,18 @@
 .menu__column-links_mobile {
+display: none;
+}
 
+@media screen and (max-width: 375px) {
+  .menu__column-links_mobile {
+    position: absolute;
+    width: 100%;
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+    z-index: 5;
+    background-color: black;
+    margin: 0;
+    padding: 16px;
+    font-size: 1.125rem;
+  }
 }
