--- a/src/blocks/header/__input/header__input.css
+++ b/src/blocks/header/__input/header__input.css
@@ -15,3 +15,8 @@ padding-left: 24px;
     margin-bottom: 16px;
     }
   }
+
+
+.header__input:invalid:not(:placeholder-shown) + .popup__err {
+	display: block;
+}
