--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -3,8 +3,14 @@
   height: 64px;
   border: 1px solid rgba(0, 0, 0, .2);
   margin-top: 40px;
-  color: #B6BCBF;
+  color: #FFFFFF;
   font-size: 1.125rem;
   border-radius: 100px;
-  background-color: #E6E8EB;
+  background-color: #2F71E5;
 }
+
+.popup__button:disabled {
+  background-color: #E6E8EB;
+  color: #B6BCBF;
+}
+
