--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -9,6 +9,8 @@
 @import url(./__button/user-info__edit-button.css);
 @import url(./__tip/popup__tip.css);
 @import url(./__reg/popup__reg.css);
+@import url(./__content-succeeded/popup__content-succeeded.css);
+
 
 .popup {
   position: fixed;
@@ -21,5 +23,4 @@
   align-items: center;
   justify-content: center;
   z-index: 10;
-  display: none;
 }
