--- a/src/blocks/results/__container/results__continer.css
+++ b/src/blocks/results/__container/results__continer.css
@@ -1,6 +1,7 @@
 .results__continer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: max(1fr);
   column-gap: 16px;
   row-gap: 16px;
 }
