--- a/src/blocks/results/results.css
+++ b/src/blocks/results/results.css
@@ -3,7 +3,12 @@
 @import url(./__title/results__title.css);
 @import url(./__show-more/results__show-more.css);
 
+.results {
+  display: none;
+}
+
 .results.results_about {
   background-color: #F5F6F7;
+  display: block;
 }
 
